# Ammuto

./: .gitignore  Cargo.toml  README.md
ammuto-cli/: Cargo.toml
ammuto-client/: Cargo.toml
ammuto-client/src/: app.rs
ammuto-client/src-tauri/: Cargo.toml  tauri.conf.json
ammuto-lib/: Cargo.toml
ammuto-lib/src/: connection.rs  file.rs  lib.rs  tag.rs
