[package]
name = "ammuto-lib"
version = "0.1.0"
edition = "2021"
description = "The core functionality of Ammuto. Any and all Ammuto clients and servers written officially will operate on this"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json5 = "0.4.1"
serde = { version = "1.0.189", features = [ "derive" ] }
uuid = { version = "1.5.0", features = [ "serde" ] }
