[package]
name = "ammuto-lib"
version = "0.1.0"
edition = "2021"
description = "The core functionality of Ammuto. Any and all Ammuto clients and servers written officially will operate on this"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json5 = "0.4.1"
serde = { version = "1.0.189", features = [ "derive" ], optional = true }
sqlite = "0.31.1"
uuid = { version = "1.5.0", features = [ "serde", "v4" ] }

[features]
# By default, no database implementation is provided, so that the developer may choose to provide their own.
sqlite = [] # Uses SQLite as the database storage medium. Faster and more stable, but requires conversion to transport
json = [ "serde" ] # Uses JSON5 as the database storage medium. Slower and may have bugs, but uses a more portable format
serde = [ "dep:serde", "uuid/serde" ]
